PostgreSQL connected, implemented simple query processing, basic commands for working with databases. Significant code refactoring has been done.